# daycount

./: .pre-commit-config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
